--- a/docs/assets/css/app-css/styles3.css
+++ b/docs/assets/css/app-css/styles3.css
@@ -33,6 +33,9 @@
   align-items: center;
   border-bottom: 1.5px solid #c9ceec;
 }
+.btnOptInfo_Tarea {
+  display: none;
+}
 .opcionesNav_info_tarea {
   display: flex;
   gap: 8px;
@@ -73,7 +76,7 @@
   gap: 15px;
 }
 
-.promandaTarea {
+.progamadaTarea {
   height: 86vh;
   border-radius: 10px;
   border: 1.5px solid #c9ceec;
@@ -133,7 +136,7 @@
   place-items: center;
   font-size: 22px;
 
-  background: linear-gradient(145deg, #38bdf8, #0284c7);
+  background: linear-gradient(145deg, #1a1a1a, #000000);
   color: white;
 }
 
@@ -188,7 +191,8 @@
 /* ===== ACCIONES ===== */
 .panel-acciones {
   margin-top: auto;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 10px;
 }
 
@@ -217,6 +221,17 @@
   color: #166534;
 }
 
+.btn-accion.removerCompletar {
+  background: #fee2e2;
+  color: #b91c1c;
+  padding: 0;
+  margin: 0;
+}
+
+.btn-accion.removerCompletar span {
+  color: #b91c1c;
+}
+
 .btn-accion.editar {
   background: #e0f2fe;
   color: #0369a1;
@@ -226,7 +241,6 @@
   transform: scale(1.03);
 }
 
-/* ===== UTIL ===== */
 .hidden {
   display: none;
 }
@@ -490,13 +504,22 @@
   }
   .layaut-InfoTask {
     grid-template-columns: auto;
+    padding: 5px;
   }
   .opcionesNav_info_tarea {
-    justify-content: left;
+    justify-content: right;
+    padding: 8px;
   }
   .headerInfo_Tarea {
-    grid-template-columns: auto;
+    grid-template-columns: 30% auto;
     gap: 6px;
+    background: transparent;
+  }
+  .btnOptInfo_Tarea {
+    display: block;
+  }
+  .optInfo_Tarea {
+    display: none;
   }
   .CardsTareas {
     grid-template-columns: auto;
