--- a/docs/assets/css/app-css/styles3.css
+++ b/docs/assets/css/app-css/styles3.css
@@ -1,8 +1,36 @@
 /*stylo gobal de targetas*/
+.panel-sinTareas {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  border-radius: 8px;
+
+  background: linear-gradient(
+    180deg,
+    rgba(248, 251, 255, 0.9),
+    rgba(240, 245, 255, 0.6)
+  );
+
+  border: 1.5px solid #c9ceec;
+  box-shadow: 0 6px 20px rgba(0, 40, 120, 0.08);
+}
+
+.contenedor-panel-sinTareas {
+  text-align: center;
+
+  height: 300px;
+  width: 400px;
+
+  border: 1.5px solid #c9ceec;
+}
+
 .info_tarea {
   margin: 4px 0 4px 0;
   position: absolute;
-  z-index: 40;
+  z-index: 30;
   width: 100%;
   height: 98.7%;
   box-shadow: 0 0 3px gainsboro;
@@ -75,6 +103,9 @@
   overflow: hidden;
   gap: 15px;
 }
+.cajaProgamadaTarea {
+  position: relative;
+}
 
 .progamadaTarea {
   height: 86vh;
@@ -123,7 +154,8 @@
 
 /* ===== HEADER ===== */
 .panel-header {
-  display: flex;
+  display: grid;
+  grid-template-columns: 17% auto;
   gap: 14px;
   align-items: center;
 }
@@ -511,7 +543,7 @@
     padding: 8px;
   }
   .headerInfo_Tarea {
-    grid-template-columns: 30% auto;
+    grid-template-columns: 50% auto;
     gap: 6px;
     background: transparent;
   }
